@@ -161,10 +161,10 @@
 +  free(p);
  
 -	if (process_name == NULL)
--		return;
+-		return 0;
 -
 -	if ((pname = strdup(basename(process_name))) == NULL)
--		return;
+-		return 0;
 -	
 -	if ((kd = kvm_open("/dev/null", "/dev/null", "/dev/null", O_RDONLY, NULL)) == NULL) {
 -		free(pname);
